--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,9 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/SimBlank/Levels/SimBlank
+EditorStartupMap=/Game/SimBlank/Levels/SimBlank.SimBlank
 +EditorTemplateMapOverrides=(Thumbnail="/Game/SimBlank/Levels/Thumbnails/SimBlank_Thumbnail.SimBlank_Thumbnail",Map="/Game/SimBlank/Levels/SimBlank.SimBlank",DisplayName=NSLOCTEXT("[/Script/EngineSettings]", "C47C7345459213852543F1906820C22C", "Simulation Default"))
-GameDefaultMap=/Game/Main
+GameDefaultMap=/Game/SimBlank/Levels/SimBlank.SimBlank
 
 [/Script/Engine.RendererSettings]
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
@@ -68,7 +68,7 @@ FontDPI=72
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
 bAllowNetworkConnection=True
-SecurityToken=A9E456094FDEAC70229BBFA137980582
+SecurityToken=8C0F12E14236EBF68456F3B61A750D24
 bIncludeInShipping=False
 bAllowExternalStartInShipping=False
 bCompileAFSProject=False
