--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -99,7 +99,7 @@ bSkipMovies=False
 +IniSectionDenylist=HordeStorageServers
 +IniSectionDenylist=StorageServers
 +IniSectionDenylist=/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings
-+MapsToCook=(FilePath="/Game/SimBlank/Levels/SimBlank")
++MapsToCook=(FilePath="/Game/Maps/Main")
 +DirectoriesToAlwaysCook=(Path="/NNEDenoiser")
 bRetainStagedDirectory=False
 CustomStageCopyHandler=
