--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,9 +1,20 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/SimBlank/Levels/SimBlank.SimBlank
-+EditorTemplateMapOverrides=(Thumbnail="/Game/SimBlank/Levels/Thumbnails/SimBlank_Thumbnail.SimBlank_Thumbnail",Map="/Game/SimBlank/Levels/SimBlank.SimBlank",DisplayName=NSLOCTEXT("[/Script/EngineSettings]", "C47C7345459213852543F1906820C22C", "Simulation Default"))
-GameDefaultMap=/Game/SimBlank/Levels/SimBlank.SimBlank
+EditorStartupMap=/Game/Maps/Main.Main
++EditorTemplateMapOverrides=(Thumbnail=None,Map="/Game/Maps/Main.Main",DisplayName=NSLOCTEXT("[/Script/EngineSettings]", "C47C7345459213852543F1906820C22C", "Simulation Default"))
+LocalMapOptions=
+TransitionMap=None
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Script/Engine.GameInstance
+GameDefaultMap=/Game/Maps/Main.Main
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=/Script/Engine.GameModeBase
+GlobalDefaultServerGameMode=None
 
 [/Script/Engine.RendererSettings]
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
