Use official unreal release

--- a/InfiniTwin.uproject
+++ b/InfiniTwin.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "{8BB1A39F-41A6-750E-6522-1E9D22AD5F15}",
+	"EngineAssociation": "5.5",
 	"Category": "",
 	"Description": "",
 	"Modules": [
