--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -98,6 +98,7 @@ bSkipMovies=False
 +IniSectionDenylist=StorageServers
 +IniSectionDenylist=/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings
 +MapsToCook=(FilePath="/Game/Maps/Main")
++DirectoriesToAlwaysStageAsNonUFS=(Path="Assets")
 bRetainStagedDirectory=False
 CustomStageCopyHandler=
 
