--- a/Content/Assets/UIConfig.json
+++ b/Content/Assets/UIConfig.json
@@ -1,7 +1,18 @@
 {
     "components": {
         "UIScale": {
-            "Value": 1
+            "Value": 2
+        },
+        "UIScheme": {
+            "DarkMode": true,
+            "Contrast": 0.5,
+            "Variant": 3,
+            "PrimaryColor": "0xFF1B6EF3",
+            "SecondaryColor": "0xFF8E909B",
+            "TertiaryColor": "0xFF4A90E2",
+            "NuetralColor": "0xFF919094",
+            "NeutralVariantColor": "0xFF8F9099",
+            "ErrorColor": "0xFFAB342C"
         }
     }
 }
