Update ECS and UIElements

--- a/Content/Assets/UIConfig.json
+++ b/Content/Assets/UIConfig.json
@@ -7,12 +7,12 @@
             "DarkMode": true,
             "Contrast": 0.5,
             "Variant": 3,
-            "PrimaryColor": "0xFF1B6EF3",
-            "SecondaryColor": "0xFF8E909B",
-            "TertiaryColor": "0xFF4A90E2",
-            "NuetralColor": "0xFF919094",
-            "NeutralVariantColor": "0xFF8F9099",
-            "ErrorColor": "0xFFAB342C"
+            "Primary": "0xFF1B6EF3",
+            "Secondary": "0xFF8E909B",
+            "Tertiary": "0xFF4A90E2",
+            "Neutral": "0xFF919094",
+            "NeutralVariant": "0xFF8F9099",
+            "Error": "0xFFAB342C"
         }
     }
 }
