...adding support for localization...

--- a/Content/Assets/ITUIConfig.json
+++ b/Content/Assets/ITUIConfig.json
@@ -1,11 +1,7 @@
-[
     {
-        "tags": [
-            "Viewport",
-            "Toolbar"
-        ],
         "components": {
-            "Widget": null
+            "Locale": {
+                "Value": "en"
+            }
         }
     }
-]
