--- a/Content/Assets/UISettings.json
+++ b/Content/Assets/UISettings.json
@@ -15,6 +15,9 @@
             "TextFont": {
                 "Value": "Roboto"
             },
+            "IconFont": {
+                "Value": "GoogleSymbols"
+            },
             "Locale": {
                 "Value": "en"
             },
