Apply material to ism

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -48,7 +48,7 @@ InternationalizationPreset=English
 -CulturesToStage=en
 +CulturesToStage=en
 LocalizationTargetCatchAllChunkId=0
-bCookAll=False
+bCookAll=True
 bCookMapsOnly=False
 bTreatWarningsAsErrorsOnCook=False
 bSkipEditorContent=False
@@ -70,8 +70,14 @@ bSkipMovies=False
 -IniKeyDenylist=IOSTeamID
 -IniKeyDenylist=SigningCertificate
 -IniKeyDenylist=MobileProvision
+-IniKeyDenylist=AppStoreConnectKeyPath
+-IniKeyDenylist=AppStoreConnectIssuerID
+-IniKeyDenylist=AppStoreConnectKeyID
 -IniKeyDenylist=IniKeyDenylist
 -IniKeyDenylist=IniSectionDenylist
++IniKeyDenylist=AppStoreConnectKeyPath
++IniKeyDenylist=AppStoreConnectIssuerID
++IniKeyDenylist=AppStoreConnectKeyID
 +IniKeyDenylist=KeyStorePassword
 +IniKeyDenylist=KeyPassword
 +IniKeyDenylist=DebugKeyStorePassword
